# BookstoreWorkshop

./: Dockerfile  Readme.md  db.sql  docker-compose.yaml  setup.cfg  setup.py
workshop/: __init__.py  __main__.py  db.py  manager.py  model.py  schemas.py
