[metadata]
name = workshop
author = Jeremiasz Macura,Grzegorz Kotarski
author-email = jeremiasz.macura@intel.com,grzegorz.kotarski@intel.com
summary = Sample Flask application for Intel workshop
description-file = README.md
home-page = https://github.com/Jeremiaszmacura/devops-workshops-for-students
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: FastAPI
    Topic :: Education

[options]
packages = find:
install_requires = 
    fastapi
    uvicorn[standard]
    pydantic
    black
    sqlalchemy
    psycopg2-binary
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    pylint
    black

[options.extras_require]
dev =
    pytest
    pylint
    black
    wheel

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    workshop = workshop.main:main

[aliases]
test=pytest